# majlis-contact-center

./: .gitignore  DEMO_MODE_SETUP.md  DEMO_QUICK_START.md  DEPLOYMENT_GUIDE.md  STEP3_RUNTIME_WIRING_FIX.md  VERCEL_DEPLOYMENT_CHECKLIST.md  package-lock.json  package.json  requirements.txt  vercel.json
api/py/: [...path].py  index.py
app/: layout.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/inbox/: page.tsx
app/(dashboard)/knowledge/: page.tsx
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/banking_agent/: graphbuilder.py  nodes.py  prompts.py  state.py
backend/app/core/: config.py
backend/app/infra/: mcp.json  mcp_supabase.py  supabase_client.py
backend/app/routes/: chat.py  utils.py
backend/app/scripts/: mcp_list_tables.py
components/: chat-agent-desktop.tsx  chat-inbox.tsx  theme-toggle.tsx
components/inbox/: conversation-list.tsx  conversation-panel.tsx  queue-sidebar.tsx
components/layout/: app-header.tsx  app-sidebar.tsx
components/ui/: message-chart.tsx
docs/: API_ROUTES_DOCUMENTATION.md  BACKEND_ARCHITECTURE.md  DEMO_MODE_DISABLED_FEATURES.md  DEMO_READINESS.md  FRONTEND_REALTIME_INTEGRATION.md  VERCEL_DEPLOYMENT.md
lib/: banking-store.ts  chat-queries.ts  conversation-handling.ts  permissions.ts  supabase-server.ts  supabase-store.ts  supabase.ts  utils.ts
lib/hooks/: useAgentInbox.ts  useConversationMessages.ts
scripts/: cleanup-invalid-timestamps.js  populate-demo-data.js  run-migrations.mjs  setup-supabase.js  test-supabase-connection.js
supabase/migrations/: 018_cleanup_invalid_timestamps.sql
(+3 files in other folders)
