[project]
name = "support-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "supabase>=2.4.0",
  "langchain>=1.2.6",
  "langchain-community>=0.4.1",
  "langchain-core>=1.2.7",
  "langgraph>=1.0.6",
  "langchain-mcp-adapters>=0.2.1",
  "langchain-groq>=1.1.1",
  "langchain-anthropic>=1.3.1",
]

[tool.uvicorn]
# Optional note: run via `uvicorn app.main:app --reload --port 8000`
